--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^7.1.2",
     "framer-motion": "^3.2.2-rc.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-flip-toolkit": "^7.0.13",
     "react-icons": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
