--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-flip-toolkit": "^7.0.13",
     "react-icons": "^4.1.0",
+    "react-input-slider": "^6.0.0",
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
