--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
+    "react-tooltip": "^4.2.14",
     "styled-components": "^5.2.1"
   },
   "scripts": {
