pie chart styled, layout fixes for smaller screens, mobile users blocked

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-circular-progressbar": "^2.0.3",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-flip-toolkit": "^7.0.13",
     "react-icons": "^4.1.0",
