--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-input-slider": "^6.0.0",
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-tooltip": "^4.2.14",
     "styled-components": "^5.2.1"
