--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "react-flip-toolkit": "^7.0.13",
     "react-icons": "^4.1.0",
     "react-input-slider": "^6.0.0",
-    "react-input-switch": "^2.2.2",
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.14",
     "styled-components": "^5.2.1"
   },
